shared.css
html{
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

div.struct > div{
    padding: 1em;
}

div.header{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 1em;
    /*place-items: center;*/

    position: sticky;
    z-index: 100;
    height:fit-content;

    background:#d0d0d0;
    border-style: solid;
    border-radius: 10px;
    border-color: #717171;
}

div.linksList{
    position: relative;

    border-style: solid;
    border-width: 2px;
    border-color: #000000;
    background-color: #95a472;
    border-radius: 10px;

    display: flex;

    justify-content: center;
    align-items: center;
    text-align: center;

    min-width: 20px;
    max-width: 100px;
    height: 67px;
    padding: 3px;

    width: 100px;
}

div.linksList:hover .contactsList,
div.contactsList:hover {
    display: block;
    position: absolute;

    top: 100%;
    left: 50%;
    transform: translateX(-50%);

    margin-top: 8px;

    z-index: 99;

    border-style: solid;
    border-radius: 10px;
    border-color:#292929;

    background-color: #95a472;
}

#contactToggle {
    display: none;
}

#contactToggle:checked ~ .contactsList {
    display: block;
    position: absolute;

    top: 100%;
    left: 50%;
    transform: translateX(-50%);

    margin-top: 8px;

    z-index: 99;

    border-style: solid;
    border-radius: 10px;
    border-color:#292929;

    background-color: #95a472;
}

div.contactsList{
    display: none;
}

div.contactsList > ul{
    list-style: none;
    margin: 0;
    padding: 8px;
    display: flex;
    flex-direction: column;
    gap: 8px;
}

div.contactsList > ul > li{
    display: flex;
    align-items: center;
    gap: 0px;

    width: fit-content;
    margin: 0px;
    padding: 0px;
}

div.linkBox{
    display: flex;
    align-items: center;
    gap: 10px;
    
    padding: 0.4em;
}

div.linkBox > a {
    display: flex;
    align-items: center;
    gap: 10px;
}

div.linkBox > a > svg{
    fill:black;

    width: 30px;
    height: 30px;
    flex-shrink: 0;
}

div.linkBox:hover > a > svg{
  fill:#4d5537;
}

p.pageName{
    font-size: 35px;
    line-height: 0px;

    text-align: center;
    vertical-align: top;
}

#otherPages{
    margin-left: auto;
}

#linksToggle {
    display: none;
}

#linksToggle:checked ~ .contactsList {
    display: block;
    position: absolute;

    top: 100%;
    left: 50%;
    transform: translateX(-50%);

    margin-top: 8px;

    z-index: 99;

    border-style: solid;
    border-radius: 10px;
    border-color:#292929;

    background-color: #95a472;
}

ul.pageList{
    display: grid;
    grid-template-columns: 100px 100px 100px 100px;
    
    grid-column-gap: 1em;
    grid-row-gap: 1em;
    grid-auto-rows:minmax(10px, auto);
    justify-content: end;
}

a.link{
    color: #000000;
    text-decoration: none;
}

div.page{
    /*font-size: 20px;*/
    border-style: solid;
    border-width: 2px;
    border-color: #000000;
    background-color:#d0d0d0;
    border-radius: 10px;

    display: flex;

    justify-content: center;
    align-items: center;
    text-align: center;

    min-width: 20px;
    max-width: 100px;
    height: 67px;
    padding: 3px;
}

div.page:hover {
  background-color: #748058;
  color: black;
}

div.centerer{
    display: grid;
    place-items: center;
}

p.title{
    text-align:center; 
    vertical-align: text-top;

    font-size: 25px;
    line-height: 30px;  

    position:static;
    overflow-wrap: break-word;
}

p.subtext{
    font-size: 15px;
    line-height: 20px; 
    
    color:#292929;

    position:static;
    overflow-wrap: break-word;
}

/* Handling responsive screen size */

/*
@media screen and (max-width: 1000px) {
    div.header{
        grid-template-columns: 1fr;
    }
    div.header > div{
        justify-content: center;
    }
    p.pageName{
        line-height: 40px;
    }
    div.header > div{
        justify-content: center;
    }
}

@media screen and (max-width: 500px) {
    div.pageList{
        grid-template-columns: 100px 100px;
    }
}

*/

